# toolsbot

./: .env.dev  .gitignore  README.md  alembic.ini  bot.py  jd_order.json  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
.gitea/workflows/: deploy.yaml
alembic/: env.py
core/: init.py  utils.py
core/db/: mongodb_conn.py
core/manager/: plugins.py
migrations/toolsbot/: 0_20240409143250_init.py  0_20240409161859_init.py  0_20240418180003_init.py  10_20240511140624_update.py  11_20240511203248_update.py  1_20240409163656_update.py  1_20240420115839_update.py  2_20240409185356_update.py  2_20240422223816_update.py  3_20240409191237_update.py  3_20240422224755_update.py  4_20240409191738_update.py  4_20240423093040_update.py  5_20240409211848_update.py  5_20240423104041_update.py  6_20240411214411_update.py  6_20240430184352_update.py  7_20240430222231_update.py  8_20240505201308_update.py  9_20240505201354_update.py
models/: bot.py  discount.py  webhook.py
plugins/: ding.py
plugins/dong/: __init__.py
services/: db_context.py
toolsbot/adapters/wcfrest/: adapter.py  bot.py  config.py  event.py  exception.py  model.py
toolsbot/adapters/wechat/: adapter.py  api.py  bot.py  config.py  event.py  exception.py  log.py  message.py  model.py
toolsbot/db/: __init__.py
toolsbot/db/models/: __init__.py  bot.py
toolsbot/plugins/ding/: __init__.py
toolsbot/plugins/discount/: __init__.py
toolsbot/plugins/gas_price/: __init__.py  config.py
toolsbot/plugins/generate_poster/: __init__.py  new_poster.py
toolsbot/plugins/helper/: __init__.py  get_message.py
toolsbot/plugins/new/: __init__.py
toolsbot/plugins/rank/: __init__.py
toolsbot/plugins/weather/: __init__.py  config.py  model.py  render_pic.py  weather_data.py
toolsbot/plugins/webapi/: __init__.py
toolsbot/plugins/webapi/api/: params.py  webhook.py  wechat.py
toolsbot/plugins/webapi/core/: middleware.py
toolsbot/plugins/webhook/: __init__.py
toolsbot/utils/: auth.py  client.py  dtk.py
