[project]
name = "toolsbot"
version = "0.1.0"
description = "toolsbot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    
]
plugins = []
plugin_dirs = ["toolsbot/plugins"]
builtin_plugins = []

[tool.pyright]
include = ["toolsbot"]
exclude = [
  "**/node_modules",
  "**/__pycache__",
]
# reportIncompatibleMethodOverride = "none"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
executionEnvironments = [
  { root = "./tests", extraPaths = [
    "./",
  ] },
  { root = "./" },
]

typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true
